--- a/index.html
+++ b/index.html
@@ -7,6 +7,18 @@
 </head>
 <body>
     <h1>Arbol genealógico de la clase de PPS</h1>
-    <div>TODO: Rellenar aquí el arbol genealógico</div>
+    <div>TODO: Rellenar aquí el arbol genealógico
+        <br>
+        <hr>
+        <ul>
+            <li>Alumno: José Maroto Castaño</li>
+            <ul>
+                <li>Padre: José Maroto Díaz</li>
+                <li>Madre: Pilar Castaño Borrego</li>
+            </ul>
+        </ul>
+    </div>
+    
+    
 </body>
 </html>
