Añadido árbol genealógico propio

--- a/index.html
+++ b/index.html
@@ -1,12 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Arbol genealógico de la clase de PPS</title>
 </head>
+
 <body>
     <h1>Arbol genealógico de la clase de PPS</h1>
     <div>TODO: Rellenar aquí el arbol genealógico</div>
+    <ul>
+        <li>Leandro Ligero Picón
+            <ul>José Ramón Ligero Recio (Padre)
+                <li>José Ligero (Abuelo Paterno)</li>
+                <li>María Recio (Abuela Paterna)</li>
+            </ul>
+            <ul>Julia Maria Picón Gutiérrez (Madre)</ul>
+                <li>Diego Picón (Abuelo Materno)</li>
+                <li>Josefa María Gutiérrez (Abuela Materna)</li>
+            <ul>Julia Ligero Picón (Hermana)</ul>
+        </li>
+    </ul>
 </body>
+
 </html>
