Añadir árbol Antonio Nogues

--- a/index.html
+++ b/index.html
@@ -1,12 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Arbol genealógico de la clase de PPS</title>
 </head>
+
 <body>
     <h1>Arbol genealógico de la clase de PPS</h1>
-    <div>TODO: Rellenar aquí el arbol genealógico</div>
+
+    <div>
+        <ul class="padres">
+            <li class="padre">Antonio Nogues Gómez</li>
+            <li class="madre">María Gómez Quintana</li>
+
+            <ul class="hijos">
+                <li class="yo">Antonio Nogues Gómez</li>
+                <li class="hermano">Jose María Nogues Gómez</li>
+            </ul>
+        </ul>
+    </div>
 </body>
+
 </html>
