--- a/index.html
+++ b/index.html
@@ -8,5 +8,15 @@
 <body>
     <h1>Arbol genealógico de la clase de PPS</h1>
     <div>TODO: Rellenar aquí el arbol genealógico</div>
+    <br>
+    
+    	<ul>
+    		<li>Alumno: Pablo Ortiz Muñoz</li>
+    		<ul>
+    			<li>Padre: Manuel Ortiz Copado</li>
+    			<li>Madre: Gardenia Muñoz Piñero</li>
+    		</ul>
+    	</ul>
+    </div>
 </body>
 </html>
