primer commit miguel dominguez

--- a/index.html
+++ b/index.html
@@ -1,12 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Arbol genealógico de la clase de PPS</title>
 </head>
+
 <body>
     <h1>Arbol genealógico de la clase de PPS</h1>
-    <div>TODO: Rellenar aquí el arbol genealógico</div>
+    <div> FAMILIA DOMINGUEZ GARROTE
+        <ul>
+            <li>Miguel
+                <ul>
+                    <li>JJ</li>
+                </ul>
+            </li>
+            <li>
+                <ul>
+                    <li>Inma</li>
+                </ul>
+            </li>
+
+        </ul>
+    </div>
+
 </body>
+
 </html>
