--- a/index.html
+++ b/index.html
@@ -8,5 +8,13 @@
 <body>
     <h1>Arbol genealógico de la clase de PPS</h1>
     <div>TODO: Rellenar aquí el arbol genealógico</div>
+    <ul>
+        <li>Jose Andres Contioso
+            <ul>
+                <li>Rosario Chaves</li>
+                <li>Jose Andres Contioso</li>
+            </ul>
+        </li>
+    </ul>
 </body>
 </html>
