--- a/index.html
+++ b/index.html
@@ -8,5 +8,9 @@
 <body>
     <h1>Arbol genealógico de la clase de PPS</h1>
     <div>TODO: Rellenar aquí el arbol genealógico</div>
+    <ul><li><ul>
+        <li>Sebastián</li>
+        <li>Montserrat</li>
+    </ul></li></ul>
 </body>
 </html>
