--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 </head>
 <body>
     <h1>Arbol genealógico de la clase de PPS</h1>
-    <div>TODO: Rellenar aquí el arbol genealógico</div>
-    <ul><li><ul>
+    <div><ul><li><ul>
         <li>Sebastián</li>
         <li>Montserrat</li>
-    </ul></li></ul>
+    </ul></li></ul></div>
+    
 </body>
 </html>
