segundo commit miguel dominguez

--- a/index.html
+++ b/index.html
@@ -11,14 +11,10 @@
     <h1>Arbol genealógico de la clase de PPS</h1>
     <div> FAMILIA DOMINGUEZ GARROTE
         <ul>
-            <li>Miguel
+            <li>Miguel Dominguez Garrote
                 <ul>
-                    <li>JJ</li>
-                </ul>
-            </li>
-            <li>
-                <ul>
-                    <li>Inma</li>
+                    <li>Jose Joaquin Dominguez Blanco</li>
+                    <li>Inmaculada Garrote Donoso</li>
                 </ul>
             </li>
 
