añadiendo a los abuelos

--- a/index.html
+++ b/index.html
@@ -7,10 +7,20 @@
 </head>
 <body>
     <h1>Arbol genealógico de la clase de PPS</h1>
-    <div><ul><li><ul>
-        <li>Sebastián</li>
-        <li>Montserrat</li>
-    </ul></li></ul></div>
+    <div>
+        <ul>
+            <li>
+                <ul>
+                    <li>Sebastián</li>
+                    <li>Montserrat</li>
+                </ul>
+                <ul>
+                    <li>Asunción</li>
+                    <li>Diego</li>
+                </ul>
+            </li>
+        </ul>
+    </div>
     
 </body>
 </html>
