--- a/index.html
+++ b/index.html
@@ -11,15 +11,22 @@
     <h1>Arbol genealógico de la clase de PPS</h1>
 
     <div>
-        <ul class="padres">
-            <li class="padre">Antonio Nogues Gómez</li>
-            <li class="madre">María Gómez Quintana</li>
-
-            <ul class="hijos">
-                <li class="yo">Antonio Nogues Gómez</li>
-                <li class="hermano">Jose María Nogues Gómez</li>
+        <ul class="hijos">
+            <li class="yo">Hijo 1: Antonio Nogues Gómez</li>
+            <li class="hermano">Hijo 2:Jose María Nogues Gómez</li>
+            <ul class="padres">
+                <li class="padre">Padre: Antonio Nogues Gómez</li>
+                <ul class="abuelos_paternos">
+                    <li class="abuelo">Abuelo paterno: Antonio Nogues Arroyo</li>
+                    <li class="abuela">Abuela paterna: Felisa Gómez Molero</li>
+                </ul>
+                <li class="madre">Madre: María Gómez Quintana</li>
+                <ul class="abuela_materna">
+                    <li class="abuela">Abuela materna: María Quintana</li>
+                </ul>
             </ul>
         </ul>
+
     </div>
 </body>
 
