--- a/index.html
+++ b/index.html
@@ -17,8 +17,17 @@
                     <li>Inmaculada Garrote Donoso</li>
                 </ul>
             </li>
-
+            <li> Jose Joaquin Dominguez Blanco
+                <ul>Paula Blanco</ul>
+                <u>Jose Dominguez Ruano
         </ul>
+        </li>
+        <li> Inmaculada Garrote Donoso
+            <ul>Agustin Garrote </ul>
+            <u>Demetria Donoso </ul>
+        </li>
+        </ul>
+
     </div>
 
 </body>
