--- a/index.html
+++ b/index.html
@@ -19,12 +19,11 @@
             </li>
             <li> Jose Joaquin Dominguez Blanco
                 <ul>Paula Blanco</ul>
-                <u>Jose Dominguez Ruano
-        </ul>
+                <ul>Jose Dominguez Ruano</ul>
         </li>
         <li> Inmaculada Garrote Donoso
             <ul>Agustin Garrote </ul>
-            <u>Demetria Donoso </ul>
+            <ul>Demetria Donoso </ul>
         </li>
         </ul>
 
