--- a/index.html
+++ b/index.html
@@ -9,12 +9,21 @@
     <h1>Arbol genealógico de la clase de PPS</h1>
     <div>TODO: Rellenar aquí el arbol genealógico</div>
     <ul>
-        <li>Jose Andres Contioso
-            <ul>
-                <li>Rosario Chaves</li>
-                <li>Jose Andres Contioso</li>
-            </ul>
-        </li>
-    </ul>
+    <li>Jose Andres Contioso
+        <ul>
+            <li>Rosario Chaves
+                <ul>
+                    <li>Rosario Lorca</li>
+                </ul>
+            </li>
+            <li>Jose Andres Contioso
+                <ul>
+                    <li>Jose Contioso</li>
+                </ul>
+            </li>
+        </ul>
+    </li>
+</ul>
+>
 </body>
 </html>
