--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <div>TODO: Rellenar aquí el arbol genealógico</div>
     <h1>Antonia y Luis</h1>
 	<ul>
+	  <li>Consuelo</li>
+	  <li>Pepe</li>
 	  <li>Antonia (Madre)
 	    <ul>
 	      <li>Luis Mariano (Padre)
