--- a/index.html
+++ b/index.html
@@ -14,6 +14,14 @@
                 <li>Ernesto Saquete Garbojosa</li>
        
                 <li>Maria Rios Garcia</li>
+
+		<li> Ceferino Saquete Martinez</li>
+
+		<li> Erina Garbajosa Brochetti</li>
+
+		<li> Crisanto Rios</li>
+
+		<li> Manuela Garcia Sequeda</li> 
         </ul>
 
 	</li>
